# kaggle-competitions-problems

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: .gitkeep
competitions/_template/: README.md
competitions/_template/notebooks/: 01_eda.ipynb  03_modeling.ipynb
competitions/_template/src/: config.py
competitions/titanic/: titanic_solution.ipynb  titanic_solution_executed.ipynb
competitions/titanic/notebooks/: 02_preprocessing.ipynb  04_submission.ipynb
configs/: config.yaml
datasets/_template/: README.md
notebooks/: .gitkeep
scripts/: new_competition.py  new_dataset.py
shared/: __init__.py
shared/auto_eda/: __init__.py
shared/automl/: __init__.py
shared/data/: __init__.py
shared/evaluation/: __init__.py
shared/models/: __init__.py
shared/pipeline/: __init__.py
shared/tracking/: __init__.py
shared/utils/: __init__.py
shared/visualization/: __init__.py
