[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-shared"
version = "0.1.0"
description = "Shared utilities for Kaggle competitions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "ipykernel",
]
automl = [
    "flaml",
    "optuna",
]
tracking = [
    "mlflow",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
